--- a/retailer.html
+++ b/retailer.html
@@ -968,12 +968,39 @@ async function removeFromCart(productId){
     alert("❌ Failed to remove item");
   }
 }
-function updateCartTotal(){
-  const vehicle = cartVehicle.value;
-  let subtotal = cart.reduce((s,i)=>s+i.price,0);
-  
-  cartDelivery.innerText = "Delivery ₹"+delivery;
-  cartGrandTotal.innerText = "Total ₹"+(subtotal+delivery);
+async function updateCartTotal() {
+
+  if (!cartVehicle.value || cart.length === 0) {
+    cartSubtotal.innerText = "";
+    cartDelivery.innerText = "";
+    cartGrandTotal.innerText = "";
+    window.__cartDelivery = null;
+    return;
+  }
+
+  const subtotal = cart.reduce((s, i) => s + i.price, 0);
+
+  const deliveryData = await getDeliveryFromServer({
+    orderAmount: subtotal,
+    vehicleType: cartVehicle.value
+  });
+
+  if (!deliveryData.success) {
+    alert(deliveryData.message || "Delivery calculation failed");
+    return;
+  }
+
+  // ✅ UI update
+  cartSubtotal.innerText = `Subtotal ₹${subtotal}`;
+  cartDelivery.innerText = `Delivery ₹${deliveryData.retailerPays}`;
+  cartGrandTotal.innerText =
+    `Total ₹${subtotal + deliveryData.retailerPays}`;
+
+  // ✅ IMPORTANT: store for payment
+  window.__cartDelivery = {
+    subtotal,
+    ...deliveryData
+  };
 }
 
 async function payCart() {
