--- a/retailer.html
+++ b/retailer.html
@@ -1017,26 +1017,51 @@ async function payCart() {
     return;
   }
 
-  
+  if (!cart || cart.length === 0) {
+    alert("🛒 Cart empty");
+    return;
+  }
+
+  // ✅ Subtotal
   const subtotal = cart.reduce((s, i) => s + i.price, 0);
-  
 
   try {
-    // 🔹 STEP 1: CREATE PAYMENT
+    // 🔹 STEP 1: DELIVERY CALCULATION FROM SERVER
+    const deliveryRes = await getDeliveryFromServer({
+      orderAmount: subtotal,
+      vehicleType: vehicle
+    });
+
+    if (!deliveryRes.success) {
+      alert(deliveryRes.message || "Delivery calculation failed");
+      return;
+    }
+
+    const retailerDelivery = deliveryRes.retailerPays;
+    const wholesalerDelivery = deliveryRes.wholesalerPays;
+    const totalDelivery = deliveryRes.totalDelivery;
+
+    const totalAmount = subtotal + retailerDelivery;
+
+    // 🔹 STEP 2: CREATE PAYMENT
     const res = await fetch(`${API}/api/orders/pay-and-create`, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
-        amount: total,
+        amount: totalAmount, // ✅ FIXED
         notes: {
-          type: "cart", // ✅🔥 CRITICAL (backend uses this)
+          type: "cart", // ✅🔥 CRITICAL
 
           retailerName: profile.name,
           retailerMobile: profile.mobile,
           retailerAddress: profile.address,
 
           vehicleType: vehicle,
-          deliveryCharge: delivery,
+
+          // ✅ DELIVERY BREAKUP (IMPORTANT)
+          deliveryCharge: totalDelivery,
+          retailerDeliveryPay: retailerDelivery,
+          wholesalerDeliveryPay: wholesalerDelivery,
 
           products: JSON.stringify(
             cart.map(p => ({
@@ -1047,7 +1072,8 @@ async function payCart() {
               wholesalerId: p.wholesalerId,
               wholesalerName: p.shopName,
               wholesalerMobile: p.mobile,
-              wholesalerAddress: p.address
+              wholesalerAddress: p.address,
+              wholesalerLocation: p.wholesalerLocation // ✅ standard key
             }))
           )
         }
@@ -1060,7 +1086,7 @@ async function payCart() {
       return;
     }
 
-    // 🔹 STEP 2: OPEN RAZORPAY
+    // 🔹 STEP 3: OPEN RAZORPAY
     const rzp = new Razorpay({
       key: data.key,
       amount: data.amount,
@@ -1068,7 +1094,6 @@ async function payCart() {
       order_id: data.order.id,
 
       handler: function () {
-        // ✅ PAYMENT SUCCESS
         localStorage.removeItem("cart");
         cart = [];
 
@@ -1092,6 +1117,7 @@ async function payCart() {
     alert("❌ Payment failed");
   }
 }
+
 // ------------------- DELIVERY -------------------
 async function openDeliveryDetails(){
   deliveryModal.style.display="flex";
