--- a/categoryProducts.html
+++ b/categoryProducts.html
@@ -159,7 +159,7 @@ body{margin:0;background:#f3f6fb}
 
 <script>
 const API = "https://shopbacked-vmhs.onrender.com";
-
+let lastDeliveryCharge = 0;
 // URL params
 const params = new URLSearchParams(location.search);
 const wid = params.get("wid");
