--- a/retailer.html
+++ b/retailer.html
@@ -587,60 +587,77 @@ function openCategory(categoryId, wid){
 }
 
 // ------------------- PRODUCT DETAIL -------------------
-function openDetail(p){
-  selectedProduct = JSON.parse(JSON.stringify(p));
+function openDetail(p) {
+  // 🔥 DEEP COPY (NO STALE LOCATION)
+  const selectedProduct = JSON.parse(JSON.stringify(p));
 
-  if(!selectedProduct.wholesalerLocation){
+  if (!selectedProduct.wholesalerLocation) {
     console.warn("⚠️ Wholesaler location missing", selectedProduct);
   }
 
-  document.getElementById("detailModal").style.display = "flex";
+  // Modal show
+  const detailModal = document.getElementById("detailModal");
+  if (detailModal) detailModal.style.display = "flex";
+
+  /* ================= GET ELEMENTS SAFELY ================= */
+  const dName       = document.getElementById("dName");
+  const dPrice      = document.getElementById("dPrice");
+  const dDesc       = document.getElementById("dDesc");
+  const dImages     = document.getElementById("dImages");
+  const dDots       = document.getElementById("dDots");
+  const deliveryBox = document.getElementById("deliveryBox");
+  const deliveryText= document.getElementById("deliveryText");
+  const totalText   = document.getElementById("totalText");
+  const vehicleType = document.getElementById("vehicleType");
+  const descToggle  = document.getElementById("descToggle");
 
   /* ================= BASIC DETAILS ================= */
-  dName.innerText  = selectedProduct.productName || "";
-  dPrice.innerText = "Price ₹" + (selectedProduct.price || 0);
+  if (dName)  dName.innerText  = selectedProduct.productName || "";
+  if (dPrice) dPrice.innerText = "Price ₹" + (selectedProduct.price || 0);
 
   /* ================= DESCRIPTION RESET ================= */
-  dDesc.innerText = selectedProduct.detail || "No description available";
-  dDesc.classList.add("short");
-  document.getElementById("descToggle").innerText = "More ⬇";
+  if (dDesc) {
+    dDesc.innerText = selectedProduct.detail || "No description available";
+    dDesc.classList.add("short");
+  }
+  if (descToggle) descToggle.innerText = "More ⬇";
 
   /* ================= DELIVERY RESET ================= */
-  dDelivery.innerText = "";
-  dTotal.innerText = "";
-  vehicleType.value = "";
+  if (deliveryBox) deliveryBox.style.display = "none";
+  if (deliveryText) deliveryText.innerText = "";
+  if (totalText)    totalText.innerText = "";
+  if (vehicleType)  vehicleType.value = "";
 
   /* ================= MULTIPLE IMAGES ================= */
-  dImages.innerHTML = "";
-  dDots.innerHTML   = "";
+  if (dImages) dImages.innerHTML = "";
+  if (dDots)   dDots.innerHTML = "";
 
   const images = (selectedProduct.images && selectedProduct.images.length)
     ? selectedProduct.images
     : (selectedProduct.image ? [selectedProduct.image] : []);
 
   images.forEach((img, i) => {
-    dImages.innerHTML += `
+    if(dImages) dImages.innerHTML += `
       <img 
         src="${img}" 
         onclick="openImage('${img}')"
         style="min-width:100%;object-fit:contain;cursor:zoom-in"
       >
     `;
-
-    dDots.innerHTML += `
-      <div class="dot ${i === 0 ? "active" : ""}"></div>
-    `;
+    if(dDots) dDots.innerHTML += `<div class="dot ${i === 0 ? "active" : ""}"></div>`;
   });
 
-  dImages.onscroll = () => {
-    const index = Math.round(
-      dImages.scrollLeft / dImages.clientWidth
-    );
-    [...dDots.children].forEach((dot, i) => {
-      dot.classList.toggle("active", i === index);
-    });
-  };
+  /* ================= DOT ACTIVE ON SCROLL ================= */
+  if(dImages && dDots) {
+    dImages.onscroll = () => {
+      const index = Math.round(dImages.scrollLeft / dImages.clientWidth);
+      [...dDots.children].forEach((dot, i) => {
+        dot.classList.toggle("active", i === index);
+      });
+    };
+  }
 
+  /* ================= DEBUG (VERY IMPORTANT) ================= */
   console.log("📦 Product:", selectedProduct.productName);
   console.log("🏪 Wholesaler Loc:", selectedProduct.wholesalerLocation);
 }
